--- a/GreenScape AI/index.html
+++ b/GreenScape AI/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Bienvenue sur GreenScape AI !
+    Notre plateforme est dédiée aux paysagistes, vous permettant de générer des décorations d'image personnalisées pour vos projets d'aménagement extérieur. Explorez notre bibliothèque d'éléments décoratifs, des plantes aux structures, et créez des rendus réalistes adaptés à vos besoins. Avec une interface intuitive, partagez facilement vos créations et impressionnez vos clients. Transformez vos idées en œuvres d'art dès aujourd'hui !">
+    <title>GreenScape AI</title>
   </head>
   <body>
     <div id="root"></div>
